updated notebooks based on the review

--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt_2.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openmp/nways_openmp_opt_2.ipynb
@@ -23,16 +23,12 @@
     "## Learning objectives\n",
     "The **goal** of this lab is to:\n",
     "\n",
-    "- Learn how to find bottleneck and performance limiters using Nsight tools\n",
-    "- Learn about ways to to extract more parallelism in loops\n",
     "- Dig deeper into kernels by analyzing it with Nsight Compute\n",
     "\n",
+    "In the previous section, we looked at some of the ways to optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenMP offloading. Moreover, we used NVIDIA Nsight Systems to get a system-wide performance analysis. Now, let's dig deeper and profile the kernel with the Nsight Compute profiler to get detailed performance metrics. Note: You will get a better understanding of the GPU architecture in the CUDA notebooks.\n",
     "\n",
-    "In this section, we will optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenMP offloading. Before we begin, feel free to have a look at the parallel version of the code and inspect it once again. \n",
     "\n",
-    "[RDF Parallel Code](../../source_code/openmp/SOLUTION/rdf_offload.cpp)\n",
-    "\n",
-    "[File Reader](../../source_code/openmp/SOLUTION/dcdread.h)\n",
+    "To do this, let's use the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.cpp) as a reference to get a similar report from Nsight Compute. Run the application, and profile it with the Nsight Systems first.\n",
     "\n",
     "Now, let's compile, and profile it with Nsight Systems first."
    ]
@@ -44,118 +40,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf SOLUTION/rdf_offload.cpp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_offload ./rdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI. Then profile the specific kernel `pair_gpu` with Nsight Compute. We use this as the base to compare with the next steps."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#profile with nsight compute\n",
-    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -k pair_gpu -o rdf_offload ./rdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload.ncu-rep) and open it via the GUI.\n",
-    "\n",
-    "## Further Optimization\n",
-    "Currently both our distributed and workshared parallelism comes from the same loop. In other words, in this example, we used teams and distribute to spread parallelism across the full GPU. As a result, all of the parallelism comes from the outer loop. There are multiple ways to increase parallelism: \n",
-    "\n",
-    "- Moving the `Parallel For` to the inner loop\n",
-    "- Collapsing the loops together\n",
-    "\n",
-    "In the following sections, we will explore each of these methods.\n",
-    "\n",
-    "\n",
-    "### Split Teams Distribute from Parallel For\n",
-    "\n",
-    "In this method, we distribute outer loop to thread teams and workshare inner loop across threads.The example below shows usage of OpenMP target splitting teams distribute from parallel for. The example code contains two levels of\n",
-    "OpenMP offloading parallelism in a double-nested loop.\n",
-    "\n",
-    "```cpp\n",
-    "#pragma omp target teams distribute \n",
-    "    for( int j = 1; j < N; j++) {\n",
-    "      #pragma parallel for \n",
-    "      for( int i = 1; i < M; i++ ) {\n",
-    "            <loop code>\n",
-    "    }\n",
-    "}\n",
-    "```\n",
-    "\n",
-    "Look at the profiler report from the previous section again. From the timeline, have a close look at the the kernel functions. Checkout the theoretical occupancy. As shown in the example screenshot below, `pair_gpu_182` kernel has the theoretical occupancy of 50%. It clearly shows that the occupancy is a limiting factor. *Occupancy* is a measure of how well the GPU compute resources are being utilized. It is about how much parallelism is running / how much parallelism the hardware could run.\n",
-    "\n",
-    "<img src=\"../images/data_thread.png\">\n",
-    "\n",
-    "NVIDIA GPUs are comprised of multiple streaming multiprocessors (SMs) where it can manage up to 2048 concurrent threads (not actively running at the same time). Low occupancy shows that there are not enough active threads to fully utilize the computing resources. Higher occupancy implies that the scheduler has more active threads to choose from and hence achieves higher performance. So, what does this mean in OpenACC execution model?\n",
-    "\n",
-    "\n",
-    "\n",
-    "Now, lets start modifying the original code and split the teams distribute. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf rdf.cpp "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspect the compiler feedback (you should get a similar output as below) you can see from *Line 172* and *Line 178* that it separated the teams distribute from parallel for.\n",
-    "\n",
-    "<img src=\"../images/openmp_feedback_offload_split.png\">\n",
-    "\n",
-    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Run on Nvidia GPU and check the output\n",
-    "!cd ../../source_code/openmp && ./rdf && cat Pair_entropy.dat"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The output should be the following:\n",
-    "\n",
-    "```\n",
-    "s2 value is -2.43191\n",
-    "s2bond value is -3.87014\n",
-    "```"
+    "!cd ../../source_code/openmp && nvc++ -mp=gpu -Minfo=mp -o rdf SOLUTION/rdf_offload_split.cpp "
    ]
   },
   {
@@ -172,9 +57,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.qdrep) and open it via the GUI. Compare the execution time for the `Pair_Calculation` from the NVTX row with the previous section and see how much the performance was improved.\n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.qdrep) and open it via the GUI. Now, right click on the kernel and click on \"Analyze the Selected Kernel with NVIDIA Nsight Compute\" (see below screenshot). \n",
     "\n",
-    "Let's dig deeper and profile the kernel with Nsight Compute and compare it with the base version."
+    "<img src=\"../images/compute_analyz.png\">\n",
+    "\n",
+    "Then, make sure to tick the radio button next to \"Display the command line to user NVIDIA Nsight Compute CLI\". \n",
+    "\n",
+    "<img src=\"../images/compute_command_line.png\" width=\"50%\" height=\"50%\">\n",
+    "\n",
+    "Then, you simply copy the command, run it and analyze the selected kernel. \n",
+    "\n",
+    "To profile the selected kernel, run the below cell (by adding `--set full` we make sure to capture all the sections in Nsight Compute profiler):"
    ]
   },
   {
@@ -195,9 +88,7 @@
     "\n",
     "<img src=\"../images/openmp_offload_split_cmp.png\">\n",
     "\n",
-    "When compared to the base version, we achieved 72% improvement in SM utilization and 123% utilization in memory. \n",
-    "\n",
-    "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.cpp) to help you understand better."
+    "When compared to the base version using the baseline feature on the Nsight Compute (base version is the very first parallel version using OpenMP), we achieved 72% improvement in SM utilization and 123% utilization in memory. "
    ]
   },
   {
@@ -206,7 +97,7 @@
    "source": [
     "### `num_teams(n)` and `thread_limit`\n",
     "\n",
-    "When using the `distribute parallel for` construct, the *for loop* is distributed across all threads for all teams of the current teams region. For example, if there are 10 teams, and each team consists of 256 threads, the loop will be distributed across 2560 threads. You can explicitly specify the number of threads to be created in the team using the `thread_limit(m)`. Moreover, you can specify the maximum number of teams created by using `num_teams(n)` (the actual number of teams may be smalled than this number). You can add these attributes to the `teams` construct. Please note that you cannot add `num_teams` to the `parallel` construct clause. For more information, please read the guide at https://docs.nvidia.com/hpc-sdk/compilers/hpc-compilers-user-guide/#openmp-subset .\n",
+    "When using the `distribute parallel for` construct, the *for loop* is distributed across all [threads](../GPU_Architecture_Terminologies.ipynb) for all teams of the current teams region. For example, if there are 10 teams, and each team consists of 256 threads, the loop will be distributed across 2560 threads. You can explicitly specify the number of threads to be created in the team using the `thread_limit(m)`. Moreover, you can specify the maximum number of teams created by using `num_teams(n)` (the actual number of teams may be smalled than this number). You can add these attributes to the `teams` construct. Please note that you cannot add `num_teams` to the `parallel` construct clause. For more information, please read the guide at https://docs.nvidia.com/hpc-sdk/compilers/hpc-compilers-user-guide/#openmp-subset .\n",
     "\n",
     "\n",
     "```cpp\n",
