--- a/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp_opt_2.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/Fortran/jupyter_notebook/openmp/nways_openmp_opt_2.ipynb
@@ -23,14 +23,11 @@
     "## Learning objectives\n",
     "The **goal** of this lab is to:\n",
     "\n",
-    "- Learn how to find bottleneck and performance limiters using Nsight tools\n",
-    "- Learn about ways to to extract more parallelism in loops\n",
     "- Dig deeper into kernels by analyzing it with Nsight Compute\n",
     "\n",
+    "In the previous section, we looked at some of the ways to optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenMP offloading. Moreover, we used NVIDIA Nsight Systems to get a system-wide performance analysis. Now, let's dig deeper and profile the kernel with the Nsight Compute profiler to get detailed performance metrics. Note: You will get a better understanding of the GPU architecture in the CUDA notebooks.\n",
     "\n",
-    "In this section, we will optimize the parallel [RDF](../serial/rdf_overview.ipynb) application using OpenMP offloading. Before we begin, feel free to have a look at the parallel version of the code and inspect it once again. \n",
-    "\n",
-    "[RDF Parallel Code](../../source_code/openmp/SOLUTION/rdf_offload.f90)\n",
+    "To do this, let's use the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.f90) as a reference to get a similar report from Nsight Compute. Run the application, and profile it with the Nsight Systems first.\n",
     "\n",
     "Now, let's compile, and profile it with Nsight Systems first."
    ]
@@ -42,114 +39,7 @@
    "outputs": [],
    "source": [
     "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvfortran -mp=gpu -Minfo=mp -o rdf nvtx.f90 SOLUTION/rdf_offload.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#profile and see output of nvptx\n",
-    "!cd ../../source_code/openmp && nsys profile -t nvtx,cuda --stats=true --force-overwrite true -o rdf_offload ./rdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openacc/rdf_offload.qdrep) and open it via the GUI. Then, profile the application with Nsight Compute. We use this as the base to compare with the next steps."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#profile with nsight compute\n",
-    "!cd ../../source_code/openmp && ncu --set full --launch-skip 0 --launch-count 1 -o rdf_offload ./rdf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload.ncu-rep) and open it via the GUI.\n",
-    "\n",
-    "## Further Optimization\n",
-    "Currently both our distributed and workshared parallelism comes from the same loop. In other words, in this example, we used teams and distribute to spread parallelism across the full GPU. As a result, all of the parallelism comes from the outer loop. There are multiple ways to increase parallelism: \n",
-    "\n",
-    "- Moving the `Parallel do` to the inner loop\n",
-    "- Collapsing the loops together\n",
-    "\n",
-    "In the following sections, we will explore each of these methods.\n",
-    "\n",
-    "\n",
-    "### Split Teams Distribute from Parallel Do\n",
-    "\n",
-    "In this method, we distribute outer loop to thread teams and workshare inner loop across threads.The example below shows usage of OpenMP target splitting teams distribute from parallel do. The example code contains two levels of OpenMP offloading parallelism in a double-nested loop.\n",
-    "\n",
-    "```fortran\n",
-    "!$omp target teams distribute\n",
-    "    do i=1,N\n",
-    "        !$omp parallel do\n",
-    "        do j=1,N\n",
-    "```\n",
-    "\n",
-    "Look at the profiler report from the previous section again. From the timeline, have a close look at the the kernel functions. Checkout the theoretical occupancy. As shown in the example screenshot below,`nvkernel_MAIN__F1L98_1_` kernel has the theoretical occupancy of 50%. It clearly shows that the occupancy is a limiting factor. *Occupancy* is a measure of how well the GPU compute resources are being utilized. It is about how much parallelism is running / how much parallelism the hardware could run.\n",
-    "\n",
-    "<img src=\"../images/f_offload_grid.png\">\n",
-    "\n",
-    "\n",
-    "NVIDIA GPUs are comprised of multiple streaming multiprocessors (SMs) where it can manage up to 2048 concurrent threads (not actively running at the same time). Low occupancy shows that there are not enough active threads to fully utilize the computing resources. Higher occupancy implies that the scheduler has more active threads to choose from and hence achieves higher performance. So, what does this mean in OpenACC execution model?\n",
-    "\n",
-    "\n",
-    "Now, lets start modifying the original code and split the teams distribute. From the top menu, click on *File*, and *Open* `rdf.f90` from the current directory at `Fortran/source_code/openmp` directory. Remember to **SAVE** your code after changes, before running below cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compile for Tesla GPU\n",
-    "!cd ../../source_code/openmp && nvfortran -mp=gpu -Minfo=mp -o rdf nvtx.f90 SOLUTION/rdf_offload.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspect the compiler feedback (you should get a similar output as below) you can see from *Line 98* that it separated the teams distribute from parallel do.\n",
-    "\n",
-    "<img src=\"../images/f_openmp_feedback_offload_split.png\">\n",
-    "\n",
-    "Now, validate the output by running the executable, and then **Profile** your code with Nsight Systems command line `nsys`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Run on Nvidia GPU and check the output\n",
-    "!cd ../../source_code/openmp && ./rdf && cat Pair_entropy.dat"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The output should be the following:\n",
-    "\n",
-    "```\n",
-    "s2      :    -2.452690945278331     \n",
-    "s2bond  :    -24.37502820694527    \n",
-    "```"
+    "!cd ../../source_code/openmp && nvfortran -mp=gpu -Minfo=mp -o rdf nvtx.f90 SOLUTION/rdf_offload_split.f90 -L/opt/nvidia/hpc_sdk/Linux_x86_64/21.3/cuda/11.2/lib64 -lnvToolsExt"
    ]
   },
   {
@@ -166,11 +56,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.qdrep) and open it via the GUI. Compare the execution time for the `Pair Calculation` from the NVTX row with the previous section and see how much the performance was improved (you should be getting similar screenshots as below where 1) is the base version and 2) is the current version after splitting the \"Teams Distribute\" from \"Parallel Do\".  The \"Pair Calculation\" reduced from 61.2 ms to 45.3 ms.\n",
+    "Let's checkout the profiler's report. [Download the profiler output](../../source_code/openmp/rdf_offload_split.qdrep) and open it via the GUI. Now, right click on the kernel and click on \"Analyze the Selected Kernel with NVIDIA Nsight Compute\" (see below screenshot). \n",
     "\n",
-    "<img src=\"../images/f_offload_compare_nvtx.png\">\n",
+    "<img src=\"../images/compute_analyz.png\">\n",
     "\n",
-    "Let's dig deeper and profile the kernel with Nsight Compute and compare it with the base version."
+    "Then, make sure to tick the radio button next to \"Display the command line to user NVIDIA Nsight Compute CLI\". \n",
+    "\n",
+    "<img src=\"../images/compute_command_line.png\" width=\"50%\" height=\"50%\">\n",
+    "\n",
+    "Then, you simply copy the command, run it and analyze the selected kernel. \n",
+    "\n",
+    "To profile the selected kernel, run the below cell (by adding `--set full` we make sure to capture all the sections in Nsight Compute profiler):"
    ]
   },
   {
@@ -191,7 +87,7 @@
     "\n",
     "<img src=\"../images/f_openmp_offload_split_cmp.png\">\n",
     "\n",
-    "When compared to the base version, we achieved 124% improvement in SM utilization and 709% utilization in memory. \n",
+    "When compared to the base version using the baseline feature on the Nsight Compute (base version is the very first parallel version using OpenMP), we achieved 124% improvement in SM utilization and 709% utilization in memory. \n",
     "\n",
     "Feel free to checkout the [solution](../../source_code/openmp/SOLUTION/rdf_offload_split.f90) to help you understand better."
    ]
