--- a/ai/RIVA/English/Python/jupyter_notebook/Intro/Intro_to_Riva.ipynb
+++ b/ai/RIVA/English/Python/jupyter_notebook/Intro/Intro_to_Riva.ipynb
@@ -1,36 +1,47 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Copyright 2021 NVIDIA Corporation. All Rights Reserved.\n",
-    "#\n",
-    "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
-    "# you may not use this file except in compliance with the License.\n",
-    "# You may obtain a copy of the License at\n",
-    "#\n",
-    "#     http://www.apache.org/licenses/LICENSE-2.0\n",
-    "#\n",
-    "# Unless required by applicable law or agreed to in writing, software\n",
-    "# distributed under the License is distributed on an \"AS IS\" BASIS,\n",
-    "# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n",
-    "# See the License for the specific language governing permissions and\n",
-    "# limitations under the License.\n",
-    "# =============================================================================="
+    "\n",
+    "# Python API Examples\n",
+    "\n",
+    "This notebook walks through the basics of the Riva Speech and Language AI Services."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
+    "## Learning objectives\n",
     "\n",
-    "# Python API Examples\n",
+    "- Understand how interact with Riva Speech and Natural Languages APIs, services and use cases\n",
     "\n",
-    "This notebook walks through the basics of the Riva Speech and Language AI Services.\n",
+    "## Requirements and setup\n",
+    "\n",
+    "To execute this notebook, please follow the setup steps in [README](./README.md).\n",
+    "\n",
+    "We first generate some required libraries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Content\n",
+    "1. [Offline ASR Example](#1)\n",
+    "1. [Core NLP Service Examples](#2)\n",
+    "1. [TTS Service Example](#3)\n",
+    "1. [Riva NLP Service Examples](#4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
     "\n",
     "## Overview\n",
     "\n",
@@ -51,31 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"560\"\n",
-       "            height=\"315\"\n",
-       "            src=\"https://www.youtube.com/embed/r264lBi1nMU?rel=0&amp;controls=0&amp;showinfo=0?frameborder=0&allowfullscreen=True\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2406cdb97c0>"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import IFrame\n",
     "\n",
@@ -99,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more detailed information on Riva, please refer to the [Riva developer documentation](https://developer.nvidia.com/).\n",
+    "For more detailed information on Riva, please refer to the [Riva developer documentation](https://developer.nvidia.com/riva).\n",
     "\n",
     "## Introduction the Riva Speech and Natural Languages services\n",
     "\n",
@@ -108,21 +97,6 @@
     "- Automated speech recognition (ASR)\n",
     "- Text-to-Speech synthesis (TTS)\n",
     "- A collection of natural language understanding services such as named entity recognition (NER), punctuation, intent classification."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Learning objectives\n",
-    "\n",
-    "- Understand how interact with Riva Speech and Natural Languages APIs, services and use cases\n",
-    "\n",
-    "## Requirements and setup\n",
-    "\n",
-    "To execute this notebook, please follow the setup steps in [README](./README.md).\n",
-    "\n",
-    "We first generate some required libraries."
    ]
   },
   {
@@ -177,17 +151,6 @@
     "riva_asr = rasr_srv.RivaSpeechRecognitionStub(channel)\n",
     "riva_nlp = rnlp_srv.RivaLanguageUnderstandingStub(channel)\n",
     "riva_tts = rtts_srv.RivaSpeechSynthesisStub(channel)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Content\n",
-    "1. [Offline ASR Example](#1)\n",
-    "1. [Core NLP Service Examples](#2)\n",
-    "1. [TTS Service Example](#3)\n",
-    "1. [Riva NLP Service Examples](#4)\n"
    ]
   },
   {
@@ -675,7 +638,7 @@
     "### 1. Sample apps:\n",
     "\n",
     "Riva comes with various sample apps as a demonstration for how to use the APIs to build interesting applications such as a [chatbot](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/samples/weather.html), a domain specific speech recognition or [keyword (entity) recognition system](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/samples/callcenter.html), or simply how Riva allows scaling out for handling massive amount of requests at the same time. ([SpeechSquad)](https://docs.nvidia.com/deeplearning/riva/user-guide/docs/samples/speechsquad.html) \n",
-    "Have a look at the Sample Application section in the [Riva developer documentation](https://developer.nvidia.com/) for all the sample apps.\n",
+    "Have a look at the Sample Application section in the [Riva developer documentation](https://developer.nvidia.com/riva) for all the sample apps.\n",
     "\n",
     "\n",
     "### 2. Finetune your own domain specific Speech or NLP model and deploy into Riva.\n",
@@ -687,6 +650,13 @@
     "\n",
     "Explore the details of each of the APIs and their functionalities in the [docs](https://docs.nvidia.com/deeplearning/jarvis/user-guide/docs/protobuf-api/protobuf-api-root.html)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
