--- a/ai/RIVA/English/Python/jupyter_notebook/Intro/riva-setup.ipynb
+++ b/ai/RIVA/English/Python/jupyter_notebook/Intro/riva-setup.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20621803",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "5c176255",
    "metadata": {},
@@ -343,7 +351,21 @@
    "id": "1fbe3413",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Install client API bindings\n",
+    "!cd $RIVA_DIR && pip install $RIVA_API_WHL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "649ca521",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# IMPORTANT: Set the name of the whl file\n",
+    "RIVA_API_WHL = \"<add riva api .whl file name>\""
+   ]
   }
  ],
  "metadata": {
