--- a/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
+++ b/ai/RIVA/English/Python/jupyter_notebook/START_HERE_RIVA.ipynb
@@ -50,9 +50,23 @@
     "    - [Exercise](NER/token-classification-Exercise.ipynb)\n",
     "    - [Backup](NER/Backup.ipynb)\n",
     "\n",
+    "- Text Classification \n",
+    "    - [Text CLassification Training](NER/token-classification-training.ipynb)\n",
+    "    - [Text Classification Deployment](NER/token-classification-deployment.ipynb)\n",
+    "    - [Exercise](NER/token-classification-Exercise.ipynb)\n",
+    "    - [Backup](NER/Backup.ipynb)\n",
     "\n",
+    "- Intent Slot Classification\n",
+    "    - [Intent Slot Classification Training](NER/token-classification-training.ipynb)\n",
+    "    - [Intent Slot Classification Deployment](NER/token-classification-deployment.ipynb)\n",
+    "    - [Exercise](NER/token-classification-Exercise.ipynb)\n",
+    "    - [Backup](NER/Backup.ipynb)\n",
     "\n",
-    "\n",
+    "- Punctuation \n",
+    "    - [Punctuation Training](NER/token-classification-training.ipynb)\n",
+    "    - [Punctuation Deployment](NER/token-classification-deployment.ipynb)\n",
+    "    - [Exercise](NER/token-classification-Exercise.ipynb)\n",
+    "    - [Backup](NER/Backup.ipynb)\n",
     "\n",
     "- Challenge\n",
     "\n",
