--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part3.ipynb
@@ -785,7 +785,10 @@
     "In the upcoming notebook, let us introduce some advance networks and train them.\n",
     "\n",
     "## Important:\n",
-    "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n"
+    "<mark>Shutdown the kernel before clicking on “Next Notebook” to free up the GPU memory.</mark>\n",
+    "\n",
+    "## Licensing\n",
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n"
    ]
   },
   {
@@ -837,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
