--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Start_Here.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Start_Here.ipynb
@@ -55,7 +55,7 @@
     "We will implement neural networks to predict the steady state flow. We will start with a simple fully connected model, then implement the convolutional model. Finally, we will implement an U-network model based on [this](https://arxiv.org/abs/1710.10352) paper.\n",
     "\n",
     "## Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)\n"
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n"
    ]
   },
   {
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
