--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/The_Problem_Statement.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Tropical_Cyclone_Intensity_Estimation/The_Problem_Statement.ipynb
@@ -85,7 +85,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now that we have understood the need for building a model to eliminate human errors, let us see how to approach the problem \n"
+    "#### Now that we have understood the need for building a model to eliminate human errors, let us see how to approach the problem \n",
+    "\n",
+    "---\n",
+    "## Licensing\n",
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n"
    ]
   },
   {
@@ -136,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
