--- a/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/C/jupyter_notebook/openacc/nways_openacc.ipynb
@@ -352,7 +352,7 @@
     "    }\n",
     "} \n",
     "```\n",
-    "Now, lets start modifying the original code and add the OpenACC kernel directive. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openacc` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Now, lets start modifying the original code and add the OpenACC kernel directive. Click on the <b>[rdf.cpp](../../source_code/openacc/rdf.cpp)</b> and <b>[dcdread.h](../../source_code/openacc/dcdread.h)</b> links, and modify `rdf.cpp` and `dcdread.h`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -414,7 +414,7 @@
     "    }\n",
     "} \n",
     "```\n",
-    "Now, lets start modifying the original code and add the OpenACC kernel directive. From the top menu, click on *File*, and *Open* `rdf.cpp` and `dcdread.h` from the current directory at `C/source_code/openacc` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Now, lets start modifying the original code and add the OpenACC kernel directive. Click on the <b>[rdf.cpp](../../source_code/openacc/rdf.cpp)</b> and <b>[dcdread.h](../../source_code/openacc/dcdread.h)</b> links, and modify `rdf.cpp` and `dcdread.h`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -539,7 +539,7 @@
     "Let us try adding a data clause to our code and observe any performance differences between the two. \n",
     "**Note: We have removed the managed clause in order to handle data management explicitly.**\n",
     "\n",
-    "From the top menu, click on *File*, and *Open* `rdf.cpp`, `dcdread.h` and `Makefile` from the current directory at `C/source_code/openacc` directory. Remember to **SAVE** your code after changes, before running below cells."
+    "Click on the <b>[rdf.cpp](../../source_code/openacc/rdf.cpp)</b> , <b>[dcdread.h](../../source_code/openacc/dcdread.h)</b> and <b>[Makefile](../../source_code/openacc/Makefile)</b> links, and modify `rdf.cpp`, `dcdread.h` and `Makefile`. Remember to **SAVE** your code after changes, before running below cells."
    ]
   },
   {
@@ -670,13 +670,13 @@
     "\n",
     "## Licensing \n",
     "\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -690,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
