--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Competition.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Competition.ipynb
@@ -438,7 +438,7 @@
    "metadata": {},
    "source": [
     "## Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)\n",
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0).\n",
     "\n",
     "[Previous Notebook](Part4.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;\n",
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
