--- a/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part2.ipynb
+++ b/hpc_ai/ai_science_cfd/English/python/jupyter_notebook/CFD/Part2.ipynb
@@ -560,7 +560,7 @@
     "\n",
     "\n",
     "## Licensing\n",
-    "This material is released by NVIDIA Corporation under the Creative Commons Attribution 4.0 International (CC BY 4.0)"
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
    ]
   },
   {
@@ -610,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
