--- a/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Start_Here.ipynb
+++ b/hpc_ai/ai_science_climate/English/python/jupyter_notebook/Start_Here.ipynb
@@ -88,13 +88,17 @@
     "\n",
     "- Understand the process of applying Deep Learning to solve a problem in the field of Climate Analysis \n",
     "- Understand various challenges with data pre-processing\n",
-    "- How hyper-parameters play an essential role in improving the accuracy of the model."
+    "- How hyper-parameters play an essential role in improving the accuracy of the model.\n",
+    "\n",
+    "---\n",
+    "## Licensing\n",
+    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
