--- a/hpc/nways/nways_labs/nways_MD/English/nways_MD_start_python.ipynb
+++ b/hpc/nways/nways_labs/nways_MD/English/nways_MD_start_python.ipynb
@@ -34,12 +34,22 @@
     "\n",
     " Throughout the tutorial we will be following the Analysis - Parallelization - Optimization cycle. Let us begin by understanding the NVIDIA Nsight System tool ecosystem:   \n",
     "\n",
-    "- [Introduction to Profiling](../../profiler/English/jupyter_notebook/profiling.ipynb)\n",
+    "- [Nsight Systems](../../profiler/English/jupyter_notebook/nsight_systems.ipynb)\n",
     "    - Overview of Nsight profiler tools\n",
-    "    - Introduction to NVIDIA Nsight Systems\n",
-    "    - How to use NVIDIA Tools Extension SDK (NVTX) \n",
-    "    - Introduction to NVIDIA Nsight Compute\n",
+    "    - Introduction to Nsight Systems\n",
+    "    - How to view the report\n",
+    "    - How to use NVTX APIs\n",
     "    - Optimization Steps to parallel programming \n",
+    "    \n",
+    "- [Nsight Compute](../../profiler/English/jupyter_notebook/nsight_compute.ipynb)\n",
+    "    - Introduction to Nsight Compute\n",
+    "    - Overview of sections\n",
+    "    - Roofline Charts\n",
+    "    - Memory Charts\n",
+    "    - Profiling a kernel using CLI\n",
+    "    - How to view the report\n",
+    "\n",
+    "Learn about all terminologies used throught the notebooks in the [GPU Architecture Terminologies](C/jupyter_notebook/GPU_Architecture_Terminologies.ipynb) notebook.\n",
     "    \n",
     "We will be working on porting a radial distribution function (RDF) to GPUs. Please choose one approach within the Python programming language to proceed working on RDF. \n",
     "\n",
